fix: pages overflow style

--- a/src/routes/Setting/index.scss
+++ b/src/routes/Setting/index.scss
@@ -9,6 +9,7 @@
 .flex {
   display: flex;
   flex: 1;
+  overflow: hidden;
 }
 .left {
   display: flex;
